cmake_minimum_required(VERSION 3.14)
project(entregable1)

set(CMAKE_CXX_STANDARD 17)

add_executable(entregable1 main.cpp proveedores.h proveedores.cpp nodoProv.h nodoProv.cpp listProv.h listProv.cpp menuProv.h menuProv.cpp producto.cpp producto.h nodeProd.cpp nodeProd.h listProd.cpp listProd.h menuProd.cpp menuProd.h OrdenCompra.cpp OrdenCompra.h NodoOrdenCompra.cpp NodoOrdenCompra.h ListaOrdenCompra.cpp ListaOrdenCompra.h MenuOrdenCompra.cpp MenuOrdenCompra.h Empleado.cpp Empleado.h NodoEmpleados.cpp NodoEmpleados.h ListaEmpleados.cpp ListaEmpleados.h MenuEmpleados.cpp MenuEmpleados.h Cliente.cpp Cliente.h NodoInv.cpp NodoInv.h ListaInvertida.cpp ListaInvertida.h NodoCliente.cpp NodoCliente.h ListaClientes.cpp ListaClientes.h MenuClientes.cpp MenuClientes.h Factura.cpp Factura.h NodoFactura.cpp NodoFactura.h ListaFacturas.cpp ListaFacturas.h MenuFacturas.cpp MenuFacturas.h Venta.cpp Venta.h ListaVentas.cpp ListaVentas.h NodoVenta.cpp NodoVenta.h MenuVenta.cpp MenuVenta.h Usuario.cpp Usuario.h NodoUsuario.cpp NodoUsuario.h ListaUsuarios.cpp ListaUsuarios.h)